src/include/flutter_ffi_uvc.h

// One camera per session. Sessions share nothing except the log level.
// Every call may arrive on any thread, including several threads for one
// session, and backends serialize internally. Listeners may run on native
// threads. A NULL session behaves like a closed one. Int-returning calls return
// UVC_ERROR_INVALID_PARAM (-2), uvc_ctrl_get returns INT32_MIN, JSON writers
// return 0, and uvc_last_error returns "".
typedef struct uvc_session uvc_session_t;
FFI_PLUGIN_EXPORT int uvc_start_preview(
    uvc_session_t *session,
    int frame_format,
    int width,
    int height,
    int fps);
typedef void (*uvc_error_listener_t)(void *user_data, const char *message);
FFI_PLUGIN_EXPORT void uvc_set_error_listener(
    uvc_session_t *session,
    uvc_error_listener_t listener,
    void *user_data);
typedef struct {
  int frame_format;
  int width;
  int height;
  int fps;
} uvc_mode_t;
// Runs on the worker thread. op is a UVC_REQUEST_* value and result the
// request's return code. Must not call back into this ABI.
typedef void (*uvc_request_listener_t)(
    void *user_data,
    int64_t request_id,
    int op,
    int result);
FFI_PLUGIN_EXPORT void uvc_set_request_listener(
    uvc_session_t *session,
    uvc_request_listener_t listener,
    void *user_data);
// Every request function returns an id unique for the life of the process
// and never reused, so a platform plugin may key its own state by it.
//
// Queues an open. The worker closes the device the session holds, then
// waits for uvc_supply_fd with this request id. A close queued meanwhile
// ends the wait with UVC_ERROR_INTERRUPTED. An fd already supplied is
// opened, and the close then takes it back. A stop leaves opens alone.
FFI_PLUGIN_EXPORT int64_t uvc_request_open(uvc_session_t *session);
// Hands the fd (or Windows device id) to a queued open. fd < 0 fails the
// open with UVC_ERROR_NO_DEVICE. Returns 0 when the request took the fd,
// which the session then owns until it reports device_released, and
// UVC_ERROR_INVALID_PARAM when no such open is waiting, in which case the
// caller still owns the fd.
FFI_PLUGIN_EXPORT int uvc_supply_fd(
    uvc_session_t *session,
    int64_t request_id,
    int fd);
// Queues a stream start with verification. timeout_ms bounds the
// verification. The result JSON is readable with
// uvc_take_request_result_json until the next start or auto completes:
// {"success":bool,"validFrameCount":n,"consecutiveValidFrames":n,
//  "errorCount":n,"elapsedMs":n,"lastError":"..","nativeErrorCode":n,
//  "frameFormat":n,"width":n,"height":n,"fps":n}
// A verification that times out stops the stream. A native start that
// fails may leave a previous stream running, as uvc_start_preview does.
FFI_PLUGIN_EXPORT int64_t uvc_request_start(
    uvc_session_t *session,
    uvc_mode_t mode,
    int policy,
    int consecutive_frames,
    int timeout_ms);
// Queues a start that tries the modes in order until one verifies. With
// modes == NULL the worker takes the device's modes, MJPEG first, then by
// area and fps, ascending when prefer_quality is 0 and descending
// otherwise, never H.264, at most max_candidates of them. Stops after a
// success, an interrupted or no-device attempt, or when a later request
// exists. Result JSON: {"attempts":[<start result>, ...]}
FFI_PLUGIN_EXPORT int64_t uvc_request_start_auto(
    uvc_session_t *session,
    const uvc_mode_t *modes,
    int mode_count,
    int prefer_quality,
    int max_candidates,
    int policy,
    int consecutive_frames,
    int timeout_ms);
FFI_PLUGIN_EXPORT int64_t uvc_request_stop(uvc_session_t *session);
FFI_PLUGIN_EXPORT int64_t uvc_request_close(uvc_session_t *session);
// Queues the teardown. Requests still queued complete with
// UVC_ERROR_NO_DEVICE, then this one completes once the device is closed,
// and the session is freed after that. Every later request is refused.
// The session pointer must not be used once this has completed.
FFI_PLUGIN_EXPORT int64_t uvc_request_destroy(uvc_session_t *session);
// Id of the most recently queued request, 0 before the first. A caller
// that wants to act only if nothing else was requested since (a stall
// restart) passes it as expected_latest to uvc_request_start_if.
FFI_PLUGIN_EXPORT int64_t uvc_latest_request_id(uvc_session_t *session);
// uvc_request_start that returns UVC_ERROR_INTERRUPTED without queuing
// when the latest request id is not expected_latest.
FFI_PLUGIN_EXPORT int64_t uvc_request_start_if(
    uvc_session_t *session,
    int64_t expected_latest,
    uvc_mode_t mode,
    int policy,
    int consecutive_frames,
    int timeout_ms);
// Copies the result JSON of a completed start or auto request and drops
// it. Returns bytes written, or 0 when there is none or it does not fit,
// in which case it is kept for a larger buffer.
FFI_PLUGIN_EXPORT int uvc_take_request_result_json(
    uvc_session_t *session,
    int64_t request_id,
    uint8_t *buffer,
    int buffer_length);
// Count of stream errors the session reported since creation.
FFI_PLUGIN_EXPORT int64_t uvc_error_count(uvc_session_t *session);
// Modes the open device reports. Returns the count written, at most
// max_modes, or a negative error code.
FFI_PLUGIN_EXPORT int uvc_get_supported_modes(
    uvc_session_t *session,
    uvc_mode_t *out_modes,
    int max_modes);
// ---------------------------------------------------------------------------
// Platform listener. Process-wide, set once by the platform plugin. The
// callbacks run on any thread, including the worker and the thread that
// destroys a session, and must not call back into this ABI. Setting NULL
// returns only after a callback in progress has finished.
// ---------------------------------------------------------------------------
typedef struct {
  // The session no longer uses the fd it took through uvc_supply_fd for
  // this request. The platform closes it here and nowhere else.
  void (*device_released)(void *user_data, uint64_t session_id, int64_t request_id);
  // The session id is gone for good. Fires once per destroyed session.
  void (*session_destroyed)(void *user_data, uint64_t session_id);
} uvc_platform_listener_t;
FFI_PLUGIN_EXPORT void uvc_set_platform_listener(
    const uvc_platform_listener_t *listener,
    void *user_data);